tests/algorithms/x/Elixir/data_structures/queues/linked_queue.out
warning: variable "q" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 29 │       {q} = if q.front == 0 - 1 do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/linked_queue.exs:29:8: Main.put/2

    warning: variable "q" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 52 │       {q} = if q.front == 0 - 1 do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/linked_queue.exs:52:8: Main.get/1

    warning: variable "idx" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 76 │       {count, idx} = try do
    │               ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/linked_queue.exs:76:15: Main.length/1

     warning: variable "first" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 109 │       {first, idx, res} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/linked_queue.exs:109:8: Main.to_string/1

     warning: variable "idx" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 109 │       {first, idx, res} = try do
     │               ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/linked_queue.exs:109:15: Main.to_string/1

     warning: variable "q" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 124 │       q = Map.put(q, :rear, 0 - 1)
     │       ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/linked_queue.exs:124:7: Main.clear/1

    error: imported Kernel.length/1 conflicts with local function
    │
 63 │   def length(q) do
    │       ^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/linked_queue.exs:63:7: Main (module)

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/linked_queue.exs: cannot compile module Main (errors have been logged)